<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bysyklist Oslo</string>
    
    <string name="word_bike">cycle</string>
    <string name="word_bikes">cycles</string>
    <string name="word_lock">dock</string>
    <string name="word_locks">docks</string>
    <string name="word_close">Close</string>
    
    <string name="map">Map</string>
    <string name="favorites">Favourites</string>
    <string name="preferences">Preferences</string>
    <string name="my_location">My location</string>
    <string name="nearest_bike">Nearest cycle</string>
    <string name="find_bike">Cycle</string>
    <string name="nearest_lock">Nearest dock</string>
    <string name="find_lock">Dock</string>
    
    <string name="syncdialog_message">Retrieving docking station information</string>
    <string name="syncdialog_error">An error occurred while updating docking stations. This can occur if ClearChannel\'s service is current unavailable.\n\nYou can try again later, or retry now.</string>
    <string name="syncdialog_retry">Try again</string>
    <string name="syncdialog_later">Later</string>
    
    <string name="searchdialog_title">Searching</string>
    <string name="searchdialog_message_first">Looking for free %s</string>
    
    <string name="rackdialog_title">Docking station info</string>
    <string name="rackdialog_fetching">Fetching data on available cycles and docking spaces...</string>
    <string name="rackdialog_freebikes">Available cycles: %d</string>
    <string name="rackdialog_freelocks">Available docks: %d</string>
    <string name="rackdialog_not_online">No contact with docking station.</string>
    <string name="rackdialog_dismiss">OK</string>
    
    <string name="favorites_freebikes">Cycles: %d</string>
    <string name="favorites_freelocks">Docking spaces: %d</string>
    <string name="waiting_for_data">Waiting for data...</string>
    
    <string name="choose_shortcut">Choose shortcut</string>
    
    <string name="menu_more">More</string>
    <string name="menu_update_rack_db">Update docking stations</string>
    <string name="menu_refresh_favorites">Refresh</string>
    
    <string name="menu_star_item">Add as favourite</string>
    <string name="menu_unstar_item">Remove from favourites</string>
    
    <string name="about_app">About Bysyklist Oslo</string>
    
    <string name="error_search_failed">An error occurred while searching</string>
    <string name="error_communication_failed">An error occurred while communicating with ClearChannel.</string>
    
    <string name="location_waiting">Waiting for location</string>
    <string name="location_not_found">&quot;Couldn't lock onto your position&quot;</string>
    
    <string name="content_about">Bysyklist Oslo is developed by Roger Kristiansen. The icon with the cycling android was made by Alexey Novoselov (<a href="http://www.behance.net/NoavArt/frame">www.behance.net/NoavArt</a>).\n\nError reports, suggestions or other feedback received with thanks by <a href="mailto:roger@kind-kristiansen.no">email</a>.\n\nThis application is free software, licensed under GPL v3. Source is available <a href="http://gitorious.org/bysyklist">here</a>\n\nNeither the developer or the application are connected to Clear Channel.</string>
    
    <string name="content_help"></string>
    
    <string name="start_screen">Start screen</string>
    <string name="which_screen">Which screen should open on start up</string>
    
    <string name="choose_screen">Choose screen</string>
    <string name="map_or_sat">Standard map or satellite</string>
    <string name="select_map_type">Select map type</string>
    <string name="map_type">Map type</string>
    
    <string name="satellite">Satellite</string>
</resources>