<?xml version="1.0" encoding="utf-8"?>
  <menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/map_menu"
           android:visible="false">
	    <item android:id="@+id/menuitem_nearest_bike"
	          android:title="@string/nearest_bike"
	          />
	    <item android:id="@+id/menuitem_nearest_slot"
	          android:title="@string/nearest_slot"
	          />
	    <item android:id="@+id/menuitem_my_location"
	          android:title="@string/my_location" 
	          android:icon="@android:drawable/ic_menu_mylocation"
	          />
	    <item android:id="@+id/menuitem_favorites"
	          android:title="@string/favorites" 
	          android:icon="@android:drawable/ic_menu_myplaces"
	          />
    </group>
    
    <group android:id="@+id/favorites_menu"
           android:visible="false">
        <item android:id="@+id/menuitem_refresh_favorites"
          android:title="@string/menu_refresh_favorites"
          android:icon="@drawable/ic_menu_refresh" 
          />
          
	    <item android:id="@+id/menuitem_map"
	          android:title="@string/map" 
	          android:icon="@drawable/ic_menu_mapmode"
	          />
    </group>
    
    <item xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/menuitem_sub"
          android:title="@string/menu_more" 
          android:icon="@android:drawable/ic_menu_more">
        <menu>
            <item android:id="@+id/menuitem_rack_sync"
                  android:title="@string/menu_update_rack_db" 
                  />
            <item android:id="@+id/menuitem_about"
                  android:title="@string/about_app"
                  />
        </menu>
    </item>

</menu>
